Removed keyboard event handling from automaton players.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,9 @@ section {
   padding: 0;
   position: relative;
 }
+  section#config {
+    display: none;
+  }
   section#game {
     height: 650px;
   }
