--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,20 @@ body {
   line-height: 24px;
 }
 
+
+section {
+  width: 1401px;
+  margin: 50px auto;
+  padding: 0;
+}
+section#config {
+  display: none;
+}
+section#game {
+  height: 600px;
+}
+
+
 form {
   width: 250px;
 }
@@ -22,33 +36,13 @@ form {
     justify-content: space-between;
   }
 
-section {
-  width: 1200px;
-  margin: 50px auto;
-  padding: 0;
-  position: relative;
-}
-  section#config {
-    display: none;
-  }
-  section#game {
-    height: 650px;
-  }
 
 header,
 footer,
 main,
-canvas {
+aside {
   margin: 0;
   padding: 0;
-  position: absolute;
-  left: 0;
-  right: 0;
-}
-
-header {
-  top: 0;
-  height: 50px;
 }
 
   h1 {
@@ -56,46 +50,63 @@ header {
     font-size: 48px;
     line-height: 1;
     letter-spacing: -3px;
-    margin: 0;
+    margin: 0 0 20px 0;
     padding: 0;
   }
 
+main {
+  height: 100%;
+  overflow: hidden;
+  background-color: #000;
+  background-size: 20px 20px;
+  background-image: linear-gradient(to right, #252525 1px, transparent 1px), linear-gradient(to bottom, #252525 1px, transparent 1px);
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+}
+
+article {
+  flex: 4;
+  position: relative;
+}
+
 aside {
-  display: none;
-  position: absolute;
-  top: 50px;
-  left: 100%;
-  z-index: 3;
-  width: 250px;
-  padding: 5px;
-  background: #eee;
-  border: solid 1px #ddd;
-  border-left: 0;
+  position: relative;
+  flex: 1;
+  background: #fff;
   font-size: 14px;
   line-height: 1;
 }
   aside > div {
     display: flex;
-    justify-content: space-between;
-    padding: 5px 10px;
+    justify-content: flex-end;
+    align-items: center;
   }
 
-main {
-  height: 520px;
-  margin: 50px 0 0;
-  overflow: hidden;
-  background-color: #000;
-  background-size: 20px 20px;
-  background-image: linear-gradient(to right, #252525 1px, transparent 1px), linear-gradient(to bottom, #252525 1px, transparent 1px);
-}
+  #scoreboard {
+    width: 100%;
+    display: block;
+  }
+  #scoreboard > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px 10px 0;
+  }
+  #scoreboard > div div {
+    flex: 1;
+  }
+  #scoreboard > div div:last-child {
+    text-align: right;
+  }
 
-footer {
-  bottom: 0;
-  height: 80px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
+  #controls {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0 20px;
+  }
 
 button {
   cursor: pointer;
@@ -119,7 +130,6 @@ nav {
     border-radius: 50%;
     background: #eee;
     border: solid 1px #ddd;
-    margin: 0 0 0 8px;
   }
     nav.arrows button {
       margin: 0;
@@ -145,10 +155,11 @@ nav {
 
   }
     nav.others button {
+      background: #eee;
       height: 25px;
       line-height: 25px;
-      padding: 0 8px;
-      margin: 0 0 0 8px;
+      padding: 0 10px;
+      margin: 0 10px 0 0;
       font-size: 14px;
     }
 
@@ -175,17 +186,17 @@ nav {
     line-height: 1;
   }
   .obj.-positive {
-    box-shadow: 0 0 8px 2px rgba(255, 255, 255, .75);
+    box-shadow: 0 0 8px 2px #fc0;
     transition: box-shadow 0s ease-out;
   }
   .obj.-negative {
-    box-shadow: 0 0 8px 2px rgba(255, 0, 0, .75);
+    box-shadow: 0 0 8px 2px #c00;
     transition: box-shadow 0s ease-out;
   }
 
   .-player {
     border-radius: 50%;
-    background: #d26913;
+    background: #f90;
     /* Fit between snapTo blocks. */
     width: 18px;
     height: 18px;
